{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 9,
  "lineage": "bdbdc146-5221-5c21-7887-8b695182135e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511559259343:loadbalancer/tf-lb-20210703100635061000000001",
            "availability_zones": [
              "us-east-1d"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20210703100635061000000001-245694540.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 5,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20210703100635061000000001",
            "idle_timeout": 60,
            "instances": [
              "i-0e267c2557eb53cf6"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20210703100635061000000001",
            "security_groups": [
              "sg-0eb59e1d281b6c18b"
            ],
            "source_security_group": "511559259343/elb_jenkins_sg",
            "source_security_group_id": "sg-0eb59e1d281b6c18b",
            "subnets": [
              "subnet-0c0c2f9dff155fe46"
            ],
            "tags": {
              "Author": "djohn",
              "Name": "jenkins_elb",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Author": "djohn",
              "Name": "jenkins_elb",
              "Tool": "Terraform"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.dav-jenkins",
            "aws_security_group.dav-jenkins_sg",
            "aws_security_group.elb_jenkins_sg",
            "data.aws_ami.dav-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dav-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0076822ddf887abb7",
            "arn": "arn:aws:ec2:us-east-1:511559259343:instance/i-0e267c2557eb53cf6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e267c2557eb53cf6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "jong-prod",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc5cd00b2eb80e7a",
            "private_dns": "ip-172-31-25-228.ec2.internal",
            "private_ip": "172.31.25.228",
            "public_dns": "ec2-54-243-23-160.compute-1.amazonaws.com",
            "public_ip": "54.243.23.160",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021bb1a0ae24e34fa",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "dav-jenkins_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0c2f9dff155fe46",
            "tags": {
              "Author": "djohn",
              "Name": "dav-jenkins",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Author": "djohn",
              "Name": "dav-jenkins",
              "Tool": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-003cb1332612615fd"
            ]
          },
          "dependencies": [
            "aws_security_group.dav-jenkins_sg",
            "data.aws_ami.dav-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dav-jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511559259343:security-group/sg-003cb1332612615fd",
            "description": "Jenkins Server: created by Terraform for [dev]",
            "egress": [],
            "id": "sg-003cb1332612615fd",
            "ingress": [],
            "name": "dav-jenkins_sg",
            "name_prefix": "",
            "owner_id": "511559259343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dav-jenkins",
              "env": "dev"
            },
            "tags_all": {
              "Name": "dav-jenkins",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-05215a5399646ca1d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511559259343:security-group/sg-0eb59e1d281b6c18b",
            "description": "Allow https traffic",
            "egress": [],
            "id": "sg-0eb59e1d281b6c18b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "elb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "511559259343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Author": "djohn",
              "Name": "elb_jenkins_sg",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Author": "djohn",
              "Name": "elb_jenkins_sg",
              "Tool": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05215a5399646ca1d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dav-jenkins_from_source_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "172.31.0.0/16"
            ],
            "description": "ssh to dav-jenkins_sg",
            "from_port": 22,
            "id": "sgrule-4075195372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003cb1332612615fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dav-jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dav-jenkins_from_source_ingress_webui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0",
              "172.31.0.0/16"
            ],
            "description": "jenkins web",
            "from_port": 8080,
            "id": "sgrule-2745281038",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003cb1332612615fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dav-jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dav-jenkins_to_other_machines_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow jenkins master to ssh to other machines",
            "from_port": 0,
            "id": "sgrule-2941813482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-003cb1332612615fd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.dav-jenkins_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511559259343:vpc/vpc-0f87c4af59d34a9b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0081b17784d0e0540",
            "default_route_table_id": "rtb-0eb6c3baa2d1400a2",
            "default_security_group_id": "sg-0dfb24d7e22302df2",
            "dhcp_options_id": "dopt-0f51d229560a7570a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f87c4af59d34a9b0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb6c3baa2d1400a2",
            "owner_id": "511559259343",
            "tags": {
              "Author": "djohn",
              "Name": "172.31.0.0/16",
              "Tool": "Terraform"
            },
            "tags_all": {
              "Author": "djohn",
              "Name": "172.31.0.0/16",
              "Tool": "Terraform"
            }
          }
        }
      ]
    }
  ]
}